# Afkanerd-DekuDaemon

./: .gitignore  @s  About.md  CMakeLists.txt  Doxyfile  Jia6tQj8O9LCrVKRAFg3dZo0GXUD47qB  README.md  auto_commit.sh  cl_modems.cxx  daemon.cxx  declarations.hpp  gl_modem_extractor.cxx  gl_modem_listener.cxx  gl_request_queue_listener.cxx  helpers.hpp  logger.hpp  makefile  modem_information_extraction.sh  sample_request.txt  tester  tester.cxx  version_control.h  version_control.h.in
UTest/: README.md  complete_system_test.cxx  main.cxx  makefile  modem_listener_test.cxx  modem_test.cxx  mysql_test.cxx  parsers.cxx  parsers_test.cxx  run_test.sh  sys_calls_test.cxx  ussd_test.cxx
UTest/custom/: modem_test.cxx
bins/: README.md
builds/: README.md
common_files/: __DEKU__.sql  event_models.txt
docs/: Doxyfile
docs/html/: annotated.html  classModem-members.html  classModem.html  classModems-members.html  classModems.html  classUSSD-members.html  classUSSD.html  classes.html  escape_8hpp_source.html  (+24 more)
scripts/: __DEKU__.sql  custom_deactivate_mtn_modems.txt  modem.py  modem_information_extraction.sh  ses_tok.xml  updates.sh  wifi_modems_sms.sh
sms_scripts/: modem_sms_received.csv  readme.md  sms_to_csv.ipynb  sms_to_csv.py
src/: .gitignore  .start.cxx.swo  UTest.cxx  epoll  epoll.cxx  helpers.cxx  inotify  inotify.cxx  makefile  mem_leak  mem_leak.cxx  mem_leak1  mem_leak1.cxx  start  start.cxx  start_routines.hpp  start_test  start_test.cxx  utest
sys_files/: deku_daemon.service
tmp/: CTkewrRn90UohpPSZNq6ltf51uYdgHFL
wisdom-nji.github.io/: index.html
(+86 files in other folders)
